--- a/dashboard/pubspec.yaml
+++ b/dashboard/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  http: ^1.1.0
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
